<resources>
    <string name="app_name">Nano Apps</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="listing_title">Nano Apps</string>
    <string name="app_spotify">Spotify Streamer</string>
    <string name="app_scores">Scores</string>
    <string name="app_library">Library</string>
    <string name="app_builditbigger">Built it Bigger</string>
    <string name="app_xyz_reader">XYZ Reader</string>
    <string name="app_capstone">Capstone</string>
</resources>
