<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scollview"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listing_title"
                android:id="@+id/listing_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:background="#999999"
                android:layout_margin="4dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_spotify"
                android:id="@+id/btn_spotify"
                android:backgroundTint="@color/blue"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_scores"
                android:id="@+id/btn_scores"
                android:backgroundTint="@color/blue"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_library"
                android:id="@+id/btn_library"
                android:backgroundTint="@color/blue"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_builditbigger"
                android:id="@+id/btn_builditbigger"
                android:backgroundTint="@color/blue"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_xyz_reader"
                android:id="@+id/btn_xyzreader"
                android:backgroundTint="@color/blue"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_capstone"
                android:id="@+id/btn_capstone"
                android:backgroundTint="@color/red"
                android:layout_margin="8dp"
                android:elegantTextHeight="false"
                android:textColor="@color/white" />

        </LinearLayout>

</ScrollView>
